--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -32,8 +32,8 @@
   
   .sidebar {
     grid-area: sidebar;
-    background-color: hsl(204, 100%, 86%);
-    border-left: 1px solid hsl(204, 100%, 56%);
+    background-color: rgb(0, 0, 0);
+    border-left: 3px solid rgb(90, 90, 90);
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -43,18 +43,19 @@
     cursor: pointer;
     border: none;
     outline: none;
-    background-color: hsl(204, 100%, 86%);
+    background-color: rgb(0, 0, 0);
     padding: 1rem;
     position: relative;
     transition: background-color 150ms;
+    color:rgb(255, 246, 227);
   }
   
   .sidebar-item:hover, .sidebar-item:focus {
-    background-color: hsl(204, 100%, 76%);
+    background-color: hsl(0, 0%, 69%);
   }
   
   .sidebar-item.active {
-    background-color: hsl(204, 100%, 70%);
+    background-color: hsl(0, 0%, 57%);
   }
   
   .sidebar-item::after {
@@ -63,8 +64,8 @@
     width: 80%;
     left: 10%;
     bottom: 0;
-    height: 1px;
-    background-color: hsl(204, 100%, 46%);
+    height: 3px;
+    background-color: rgb(255, 255, 255);
   }
   
   .sidebar-item:last-child::after {
@@ -85,6 +86,6 @@
 
   .buble{
     position:absolute;
-    border:hsl(204, 100%, 46%);
+    border:hsl(0, 0%, 0%);
     border-radius: 3px;
   }
